--- a/src/GalleryPage.css
+++ b/src/GalleryPage.css
@@ -7,13 +7,13 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    max-width: 1000px;
+    max-width: 1300px;
     margin: 0 auto;
 }
 
 .gallery-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 15px;
 }
 
@@ -108,6 +108,8 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    margin-left: 10%;
+    margin-right: 10%;
     background: transparent;
     border: none;
     cursor: pointer;
@@ -139,6 +141,12 @@
     margin: 20px 0;
 }
 
+@media (max-width: 768px) {
+    .year-navigation {
+        margin: 0;
+    }
+}
+
 .year-navigation img {
     margin: 0 10px;
     padding: 10px 20px;
@@ -159,3 +167,29 @@
 }
 
 
+.category-button,
+.year-pagination-button {
+    background-color: transparent;
+    border: none;
+    padding: 10px 15px;
+    margin: 0 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    color: #555;
+    transition: color 0.3s ease, border-bottom 0.3s ease;
+    outline: none;
+}
+
+.category-button.active {
+    border-bottom: 2px solid #5582d6;;
+    color: #5582d6;;
+}
+
+.category-button:hover,
+.year-pagination-button:hover {
+    color: #5582d6;;
+}
+
+.year-pagination-button {
+    font-weight: bold;
+}
