--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@ body {
   padding: 0;
 }
 
+.news-list a {
+  color: #5582d6;
+  text-decoration: none;
+}
+
+.news-list a:hover {
+  text-decoration: underline;
+}
 
 @media (max-width: 768px) {
   .logo{
