--- a/src/TeamPage.css
+++ b/src/TeamPage.css
@@ -52,12 +52,16 @@
 }
 
 .prof-name {
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 1.2em;
+    /* font-weight: bold; */
     margin-bottom: 10px;
     display: block;
-    color: black;
+    color: black !important;
     text-decoration: none;
+}
+
+.prof-name:hover {
+    text-decoration: underline;
 }
 
 .prof-intro {
