--- a/src/TeamPage.css
+++ b/src/TeamPage.css
@@ -16,6 +16,13 @@
     }
 }
 
+
+.team-page h2 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
 .team-page h1 {
     text-align: center;
     margin-bottom: 30px;
@@ -37,6 +44,7 @@
 .profile {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 20px;
     margin-bottom: 20px;
 }
@@ -52,7 +60,7 @@
 }
 
 .prof-name {
-    font-size: 1.2em;
+    font-size: 1em;
     /* font-weight: bold; */
     margin-bottom: 10px;
     display: block;
