--- a/src/TeamPage.css
+++ b/src/TeamPage.css
@@ -23,6 +23,13 @@
     padding-bottom: 30px;
 }
 
+@media (max-width: 768px) {
+    .team-page h2 {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
 .team-page h1 {
     text-align: center;
     margin-bottom: 30px;
@@ -60,7 +67,7 @@
 }
 
 .prof-name {
-    font-size: 1em;
+    font-size: 1.3em;
     /* font-weight: bold; */
     margin-bottom: 10px;
     display: block;
@@ -93,9 +100,14 @@
 .students {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     /* justify-content: space-between; */
     gap: 20px;
     
+}
+
+.under_students {
+    justify-content: center;
 }
 
 .member {
