--- a/src/App.css
+++ b/src/App.css
@@ -144,13 +144,14 @@ body {
 
 .main {
   text-align: center;
-  padding: 90px 50px 40px 50px;
+  /* padding: 90px 50px 40px 50px; */
 }
 
 .carousel {
-  padding-top: 15px;
+  /* padding-top: 15px; */
+  padding-top: 0px;
   position: relative;
-  max-width: 75%;
+  /* max-width: 60%; */
   margin: auto;
   overflow: hidden;
 }
@@ -158,12 +159,13 @@ body {
 @media (max-width: 768px) {
   .carousel {
     max-width: 100%;
+    max-height: 500px;
   }
 }
 
 .carousel-images {
   display: flex;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 12.0s cubic-bezier(0.33, 1, 0.68, 1);
 }
 
 .carousel img {
