--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ body {
   color: rgb(0, 0, 0);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   position: fixed;
+  margin: 0px;
   top: 0;
   left: 0;
   right: 0;
